--- a/style.css
+++ b/style.css
@@ -27,10 +27,17 @@ body {
 h1{
     color: var(--cor-destaque);
 }
-.caixa-alternativa {
- cursor: pointer;
-  background-color: rgb(156, 160, 163);
-  column-rule-color: aquamarine;
 
+button {
+    background-color: var(--cor-secundaria);
+    color: var(--cor-texto);
+    border: none;
+    border-radius: 15px;
+    padding: 15px;
+    transition: background-color 0.3s;
+}
 
+button:hover{
+    background-color: var(--cor-destaque);
+    color: var(--cor-principal);
 }
